# Python-Mini-Projects-2

./: README.md  pyproject.toml  text_to_speech.py
Image Resizer/: image_resizer.py
PDF merger/: pdf_merger.py
