[tool.poetry]
name = "mini projects 2"
version = "0.1.0"
description = ""
authors = ["Charchit <charchitregmi10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyttsx3 = "^2.90"
pypdf2 = "^3.0.1"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
